--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ body {
 
 .katgo-projects-table th:nth-child(4),
 .katgo-projects-table td:nth-child(4) {
-  width: 5.5%;
+  width: 6.5%;
 }
 
 .katgo-projects-table th:nth-child(5),
@@ -252,7 +252,7 @@ body {
 
 .katgo-projects-table th:nth-child(6),
 .katgo-projects-table td:nth-child(6) {
-  width: 18.7%;
+  width: 17.7%;
 }
 
 .katgo-projects-table th:nth-child(7),
@@ -288,9 +288,9 @@ body {
             <th onclick="sortTable(4)">🗂️ ↑↓</th>
             <th onclick="sortTable(5)">PROJEKTY ↑↓</th>
             <th>CHECKBOXY</th>
-            <th onclick="sortTable(7)">1 ↑↓</th>
-            <th onclick="sortTable(8)">2 ↑↓</th>
-            <th onclick="sortTable(9)">3 ↑↓</th>
+            <th onclick="sortTable(7)">↑↓</th>
+            <th onclick="sortTable(8)">↑↓</th>
+            <th onclick="sortTable(9)">↑↓</th>
           </tr>
         </thead>
         <tbody>
