--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ body {
         <tbody>
 
 
- <!-- ░░░░░░░░░░░░░░░░░░░░░░░░░░ SAHARA ░░░░░░░░░░░░░░░░░░░░ --> 
+
 
           <!--------------------------------- SAHARA ---------------------------->
           
@@ -333,20 +333,137 @@ body {
   <td></td><td></td><td></td>
 </tr>
 
- <!---------------------------------------------------------->
+  <!--------------------------------- MONAD----------------------------> <!---------------------------------MONAD---------------------------->
 
           
-          <tr>
-            <td>telefon</td><td>2</td><td>weekly</td><td>do rozpoczęcia</td><td>Monad</td>
-            <td>PROJEKT B</td><td>CHECK</td><td></td><td></td><td></td>
-          </tr>
-          <tr>
-            <td>komputer</td><td>3</td><td>monthly</td><td>aktualne</td><td>Pozostałe</td>
-            <td>PROJEKT C</td><td>CHECK</td><td></td><td></td><td></td>
-          </tr>
+<!-- ---------------------------------DUSTED--------------------------- -->     
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Monad</td> 
+<td><a href="https://www.dusted.app/login">MONAD DUSTED Lasso</a> (<a href="https://www.dusted.app/login" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="monad1"> TIP</label>&nbsp;<label><input type="checkbox" class="check table1" data-id="monad1b"> REWARD / LASSO</label>&nbsp;<label><input type="checkbox" class="check table1" data-id="monad1c"> TRADING / SWAP</label></td><td></td><td></td><td></td></tr>
+
+<!-- ------------------------------CASTORA----------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Monad</td> 
+<td><a href="https://castora.xyz/">MONAD CASTORA Predykcja</a> (<a href="https://castora.xyz/" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="monad2"> PREDYKCJA</label>&nbsp;<label><input type="checkbox" class="check table1" data-id="monad2A"> CLAIM WIN</label></td><td></td><td></td><td></td></tr>
+
+<!-- ---------------------------------------------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Monad</td> 
+<td><a href="https://www.kuru.io/markets">MONAD KURU</a> (<a href="https://www.kuru.io/markets" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="monad3"> LITE SWAP</label>&nbsp;<label><input type="checkbox" class="check table1" data-id="monad3A"> PORTOFLIO</label>&nbsp;<label><input type="checkbox" class="check table1" data-id="monad3B"> BUY/SELL</label>&nbsp;<label><input type="checkbox" class="check table1" data-id="monad3C"> LAUNCH/CREATE</label></td><td></td><td></td><td></td></tr>
+
+<!-- ---------------------------------------------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Monad</td> 
+<td><a href="https://monad.ambient.finance/">MONAD AMBIENT</a> (<a href="https://monad.ambient.finance/" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="monad4"> SWAP</label>&nbsp;<label><input type="checkbox" class="check table1" data-id="ambient2"> LIMIT SWAP</label>&nbsp;<label><input type="checkbox" class="check table1" data-id="ambient3"> POOL</label></td><td></td><td></td><td></td></tr>
+
+<!-- ---------------------------------------------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Monad</td> 
+<td><a href="https://stake.apr.io/">MONAD STAKE aPriori</a> (<a href="https://stake.apr.io/" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="monad5"> aprMON STAKE</label></td><td></td><td></td><td></td></tr>
+
+<!-- ---------------------------------------------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Monad</td> 
+<td><a href="https://www.magmastaking.xyz/?invitedBy=XJnCE8">MAGMA</a> (<a href="https://www.magmastaking.xyz/?invitedBy=XJnCE8" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="MAGMA"> gMON STAKE</label></td><td></td><td></td><td></td></tr>
+
+<!-- ---------------------------------------------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Monad</td> 
+<td><a href="https://kintsu.xyz/staking">KINTSU</a> (<a href="https://kintsu.xyz/staking" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="KINTSU"> sMON STAKE</label></td><td></td><td></td><td></td></tr>
+
+<!-- ---------------------------------------------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Monad</td> 
+<td><a href="https://shmonad.xyz/">FASTLANE SHMONAD</a> (<a href="https://shmonad.xyz/" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="FASTLANE-SHMONAD"> shMON STAKE</label></td><td></td><td></td><td></td></tr>
+
+<!-- ---------------------------------------------------------------------- --> 
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Monad</td> 
+<td><a href="https://testnet.narwhal.finance/">MONAD TRADING Narwhal Finance</a> (<a href="https://testnet.narwhal.finance/" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="dźwignieLONG"> dźwignie LONG</label>&nbsp;<label><input type="checkbox" class="check table1" data-id="dźwignieSHORT"> dźwignie SHORT</label></td><td></td><td></td><td></td></tr>
+
+<!-- ---------------------------------------------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Monad</td> 
+<td><a href="https://madness.finance/swap">MONAD Z MICRO Madness Swapy</a> (<a href="https://madness.finance/swap" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="Madness1"> CHECK</label>&nbsp;<label><input type="checkbox" class="check table1" data-id="Madness2"> CHECK-IN</label>&nbsp;<label><input type="checkbox" class="check table1" data-id="Madness3"> DAILY TASK</label>&nbsp;<label><input type="checkbox" class="check table1" data-id="Madness4"> SWAP</label>&nbsp;<label><input type="checkbox" class="check table1" data-id="Madness5"> POOL</label>&nbsp;<label><input type="checkbox" class="check table1" data-id="Madness6"> NFT</label></td><td></td><td></td><td></td></tr>
+
+<!-- ---------------------------------------------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Monad</td> 
+<td><a href="https://app.nad.domains/">NADNAMES</a> (<a href="https://app.nad.domains/" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="NADNAMES"> DOMENY - NAZWY</label></td><td></td><td></td><td></td></tr>
+
+<!-- ---------------------------------------------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Monad</td> 
+<td><a href="https://app-monad-testnet-v2.azaar.com/swap">AZAAR</a> (<a href="https://app-monad-testnet-v2.azaar.com/swap" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="AZAAR"> SWAP</label>&nbsp;<label><input type="checkbox" class="check table1" data-id="AZAAR2"> MINT TOKEN</label></td><td></td><td></td><td></td></tr>
+
+<!-- ---------------------------------------------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Monad</td> 
+<td><a href="https://testnet.nad.fun/ref/QmAzfH">NAD.FUN</a> (<a href="https://testnet.nad.fun/ref/QmAzfH" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="NADFUN1"> CREATE COIN</label>&nbsp;<label><input type="checkbox" class="check table1" data-id="NADFUN2"> BUY/SELL</label>&nbsp;<label><input type="checkbox" class="check table1" data-id="NADFUN3"> REWARDS</label></td><td></td><td></td><td></td></tr>
+
+<!-- ---------------------------------------------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Monad</td> 
+<td><a href="https://app.crystal.exchange/swap?ref=przyborleone">CRYSTAL</a> (<a href="https://app.crystal.exchange/swap?ref=przyborleone" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="CRYSTAL1"> TRADE BASIC</label>&nbsp;<label><input type="checkbox" class="check table1" data-id="CRYSTAL2"> TRADE ADVANCED</label>&nbsp;<label><input type="checkbox" class="check table1" data-id="CRYSTAL3"> MINT FREE NFT</label></td><td></td><td></td><td></td></tr>
+
+<!-- ---------------------------------------------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Monad</td> 
+<td><a href="https://alpha.clober.io/trade?chain=10143">CLOBER</a> (<a href="https://alpha.clober.io/trade?chain=10143" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="CLOBER"> SWAP</label>&nbsp;<label><input type="checkbox" class="check table1" data-id="CLOBER2"> LIMIT/MAKE ORDER</label></td><td></td><td></td><td></td></tr>
+
+<!-- ---------------------------------------------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Monad</td> 
+<td><a href="https://app.hashflow.com/">HASHFLOW</a> (<a href="https://app.hashflow.com/" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="HASHFLOW"> EXCHANGE</label></td><td></td><td></td><td></td></tr>
+
+<!-- ---------------------------------------------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Monad</td> 
+<td><a href="https://alpha.izumi.finance/trade/swap">IZUMI MONAD</a> (<a href="https://alpha.izumi.finance/trade/swap" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="IZUMI-MONAD1"> SWAP</label>&nbsp;<label><input type="checkbox" class="check table1" data-id="IZUMI-MONAD2"> LIMIT ORDER</label>&nbsp;<label><input type="checkbox" class="check table1" data-id="IZUMI-MONAD3"> LIQUIDITY</label></td><td></td><td></td><td></td></tr>
+
+<!-- ---------------------------------------------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Monad</td> 
+<td><a href="https://testnet-preview.monorail.xyz/">MONORAIL</a> (<a href="https://testnet-preview.monorail.xyz/" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="MONORAIL"> SWAP</label></td><td></td><td></td><td></td></tr>
+
+<!-- ---------------------------------------------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Monad</td> 
+<td><a href="https://monad-test.kinza.finance/">KINZA</a> (<a href="https://monad-test.kinza.finance/" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="KINZA"> DO SPRAWDZENIA</label></td><td></td><td></td><td></td></tr>
+
+<!-- ---------------------------------------------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Monad</td> 
+<td><a href="https://dex.dirol.network/swap">DIROL</a> (<a href="https://dex.dirol.network/swap" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="DIROL"> PAUSED???</label></td><td></td><td></td><td></td></tr>
+
+<!-- ---------------------------------------------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Monad</td> 
+<td><a href="https://alpha.ammalgam.xyz/trade?action=swap">AMMALGAM</a> (<a href="https://alpha.ammalgam.xyz/trade?action=swap" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="AMMALGAM"> BETA??</label></td><td></td><td></td><td></td></tr>
+
+<!-- ---------------------------------------------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Monad</td> 
+<td><a href="https://terminal.dial.to/">DIALEKT WAITLIST</a> (<a href="https://terminal.dial.to/" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="DIALEKT-WAITLIST"> WAITLIST</label></td><td></td><td></td><td></td></tr>
+
+<!-- ---------------------------------------------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Monad</td> 
+<td><a href="https://monad.curvance.com/monad">MONAD Curvance</a> (<a href="https://monad.curvance.com/monad" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="Curvance"> CHECK</label></td><td></td><td></td><td></td></tr>
+
+
+
+
+
+
+
+
+<!-- ---------------------------------------------------------------------- --><!-- ---------------------------------------------------------------------- -->
+<!-- ---------------------------------------------------------------------- --><!-- ---------------------------------------------------------------------- -->          
         </tbody>
       </table>
     </td>
+    <!-- ---------------------------------------------------------------------- --><!-- ---------------------------------------------------------------------- --><!-- ---------------------------------------------------------------------- -->
     <td>Wiersz 1, kolumna 2</td>
   </tr>
   <tr>
