--- a/index.html
+++ b/index.html
@@ -452,11 +452,111 @@ body {
 <td><label><input type="checkbox" class="check table1" data-id="Curvance"> CHECK</label></td><td></td><td></td><td></td></tr>
 
 
+ <!---------------------------------------MEGA ETH--------------------------------> <!--------------------------------------MEGA ETH---------------------------------->
+          
+<!-- ---------------------------------------------------------------------- -->     
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>MegaETH</td> 
+<td><a href="https://testnet.gte.xyz/swap">MEGA ETH GTE SWAPY</a> (<a href="https://testnet.gte.xyz/swap" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="MEGAETH1"> SWAP X3 MIX</label>&nbsp;<label><input type="checkbox" class="check table1" data-id="MEGAETH1A"> POOLS X3 MIX</label></td><td></td><td></td><td></td></tr>
+
+<!-- ---------------------------------------------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>MegaETH</td> 
+<td><a href="https://bebop.xyz/trade?network=ethereum&buy=">BEBOP-SWAPY</a> (<a href="https://bebop.xyz/trade?network=ethereum&buy=" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="MEGAETH2"> WRAP / UNWRAP X2</label></td><td></td><td></td><td></td></tr>
+
+<!-- ---------------------------------------------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>MegaETH</td> 
+<td><a href="https://bronto.finance/swap">BRONTO</a> (<a href="https://bronto.finance/swap" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="MEGAETH3"> SWAP</label>&nbsp;<label><input type="checkbox" class="check table1" data-id="MEGAETH3A"> LOCK</label>&nbsp;<label><input type="checkbox" class="check table1" data-id="MEGAETH3B"> POOLS</label>&nbsp;<label><input type="checkbox" class="check table1" data-id="MEGAETH3C"> VOTE</label></td><td></td><td></td><td></td></tr>
+
+<!-- ---------------------------------------------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>MegaETH</td> 
+<td><a href="https://testnet.rubic.exchange/">RUBIC - SWAPY</a> (<a href="https://testnet.rubic.exchange/" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="MEGAETH4"> SWAP X5 MIX</label></td><td></td><td></td><td></td></tr>
+
+<!-- ---------------------------------------------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>MegaETH</td> 
+<td><a href="https://testnet.rarible.fun/">NFT RARIBLE</a> (<a href="https://testnet.rarible.fun/" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="MEGAETH5"> CHECK</label></td><td></td><td></td><td></td></tr>
+
+<!-- ---------------------------------------------------------------------- -->  
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>MegaETH</td> 
+<td><a href="https://testnet.xlmeme.com/megaeth">MEME XL</a> (<a href="https://testnet.xlmeme.com/megaeth" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="MEGAETH6"> DAILY BUY/SELL X5 MIX</label>&nbsp;<label><input type="checkbox" class="check table1" data-id="MEGAETH6A"> CREATE COIN</label></td><td></td><td></td><td></td></tr>
+
+<!-- ---------------------------------------------------------------------- --> 
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>MegaETH</td> 
+<td><a href="https://myntusd.com/">MYNT USD / MegaETH & Monad</a> (<a href="https://myntusd.com/" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="MEGAETH7"> CHECK</label></td><td></td><td></td><td></td></tr>
+
+<!-- ---------------------------------------------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>MegaETH</td> 
+<td><a href="https://game.megaeth.com/crossy-fluffle">CROSSY FLUFFLE GRA</a> (<a href="https://game.megaeth.com/crossy-fluffle" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="CR1"> MEGA ETH</label>&nbsp;<label><input type="checkbox" class="check table1" data-id="CR2"> MONAD</label></td><td></td><td></td><td></td></tr>
+
+ <!--------------------------------------ANDROID-----------------------------> <!-------------------------------------ANDROID--------------------------------->
+
+<!-- -------------------------RETROBRIDGE--------------------------------- -->  
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Android</td>
+<td><a href="https://retrobridge.io/quests">RETROBRIDGE</a> (<a href="https://retrobridge.io/quests" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="android1"> CHECK</label></td><td></td><td></td><td></td></tr>
+
+<!-- ----------------------------ECHO---------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Android</td>
+<td><a href=".....">ECHO</a> (<a href="....." target="_blank">C</a>) <span class="tooltip-icon" onclick="toggleTooltip(this)">⚠️<span class="tooltip-text">👉odbiór daily oraz wykonanie nowych misji socialowych w Store</span></span></td>
+<td><label><input type="checkbox" class="check table1" data-id="android2"> CHECK</label></td><td></td><td></td><td></td></tr>
+
+<!-- -----------------------------COINMARKET------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Android</td>
+<td><a href="https://coinmarketcap.com/">COINMARKET</a> (<a href="https://coinmarketcap.com/" target="_blank">C</a>) <span class="tooltip-icon" onclick="toggleTooltip(this)">⚠️<span class="tooltip-text">👉Daily odbiór nagród<br></span></span></td>
+<td><label><input type="checkbox" class="check table1" data-id="android3"> CHECK</label></td><td></td><td></td><td></td></tr>
+
+<!-- ----------------------------COINGECKO--------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Android</td>
+<td><a href="https://www.coingecko.com/en/candy">COINGECKO</a> (<a href="https://www.coingecko.com/en/candy" target="_blank">C</a>) <span class="tooltip-icon" onclick="toggleTooltip(this)">⚠️<span class="tooltip-text">👉Daily odbiór nagród<br></span></span></td>
+<td><label><input type="checkbox" class="check table1" data-id="android4"> CHECK</label></td><td></td><td></td><td></td></tr>
+
+<!-- -----------------------------SHAGA------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Android</td>
+<td><a href="https://glob.shaga.xyz/">SHAGA</a> (<a href="https://glob.shaga.xyz/" target="_blank">C</a>) <span class="tooltip-icon" onclick="toggleTooltip(this)">⚠️<span class="tooltip-text">👉Daily Spin raz dziennie<br></span></span></td>
+<td><label><input type="checkbox" class="check table1" data-id="android5"> CHECK</label></td><td></td><td></td><td></td></tr>
+
+<!-- ---------------------------------AVALON-------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Android</td>
+<td><a href="https://quests.avalon.online/login">AVALON</a> (<a href="https://quests.avalon.online/login" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="android6"> CHECK</label></td><td></td><td></td><td></td></tr>
+
+<!-- -------------------------------BITGET----------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Android</td>
+<td><a href="https://katgoc88.github.io/CHECK/">BITGET</a> (<a href="https://katgoc88.github.io/CHECK/" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="android7"> CHECK</label></td><td></td><td></td><td></td></tr>
+
+<!-- -------------------------------BREAD&BUTTER------------------------------ -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Android</td>
+<td><a href="https://m.breadnbutter.fun/home">BREAD&BUTTER</a> (<a href="https://m.breadnbutter.fun/home" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="android8"> CHECK</label></td><td></td><td></td><td></td></tr>
+
+<!-- -------------------------------TELEGRAM GALXE------------------------------ -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Android</td>
+<td><a href=".....">TELEGRAM GALXE</a> (<a href="https://katgoc88.github.io/CHECK/" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="android9"> CHECK</label></td><td></td><td></td><td></td></tr>
+
+<!-- ----------------------------TELEGRAM COLLECTION HUNTER------------------------------ -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Android</td>
+<td><a href=".....">TELEGRAM COLLECTION HUNTER</a> (<a href="https://katgoc88.github.io/CHECK/" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="android10"> CHECK</label></td><td></td><td></td><td></td></tr>
+
+<!-- ----------------------------TELEGRAM TABI ZOO----------------------------------- -->
+<tr><td>tel/komp</td><td>1</td><td>daily</td><td>aktualne</td><td>Android</td>
+<td><a href=".....">TELEGRAM TABI ZOO</a> (<a href="https://katgoc88.github.io/CHECK/" target="_blank">C</a>)</td>
+<td><label><input type="checkbox" class="check table1" data-id="android11"> CHECK</label></td><td></td><td></td><td></td></tr>
+
+<!-- -----------------------POZOSTAŁE------------------------------ --><!-- -------------------------------POZOSTAŁĘ----------------------------- -->
 
 
 
 
-
+          
 
 <!-- ---------------------------------------------------------------------- --><!-- ---------------------------------------------------------------------- -->
 <!-- ---------------------------------------------------------------------- --><!-- ---------------------------------------------------------------------- -->          
