--- a/index.html
+++ b/index.html
@@ -1544,8 +1544,20 @@ To wszystko! Teraz czekamy na zakończenie kampanii i airdrop.`}])">ℹ️</span
 
 <!-- ---------------------------TYLKO NA KOMPIE------------------------------------------- --><!-- ---------------------------------TYLKO NA KOMPIE------------------------------------- -->          
 <!-- ---------------------------------------------------------------------- --> 
+<!-- ---------------------------------------------------------------------- -->
 <tr>
-  <td>komputer</td><td></td><td></td><td></td><td>Tylko na kompie</td>
+  <td>komputer</td><td>1</td><td>daily</td><td>aktualne</td><td>Tylko na kompie</td>
+  <td><a href="https://hub.0g.ai/faucet">OG FAUCET</a> (<a href="https://hub.0g.ai/faucet" target="_blank">C</a>)</td>
+  <td>
+    <label><input type="checkbox" class="check table2" data-id="f21OG"> OG</label>&nbsp;
+    <label><input type="checkbox" class="check table2" data-id="f21A"> ETH</label>
+  </td>
+  <td></td><td></td><td></td>
+</tr>
+
+<!-- ---------------------------------------------------------------------- --> 
+<tr>
+  <td>komputer</td><td>1</td><td>daily</td><td>aktualne</td><td>Tylko na kompie</td>
   <td><a href="https://monad.curvance.com/monad">MONAD Curvance FAUCET</a> (<a href="https://monad.curvance.com/monad" target="_blank">C</a>)</td>
   <td>
     <label><input type="checkbox" class="check table2" data-id="CurvanceFAUCET"> CHECK</label>
@@ -1555,7 +1567,7 @@ To wszystko! Teraz czekamy na zakończenie kampanii i airdrop.`}])">ℹ️</span
 
 <!-- ---------------------------------------------------------------------- --> 
 <tr>
-  <td>komputer</td><td></td><td></td><td></td><td>Tylko na kompie</td>
+  <td>komputer</td><td>1</td><td>daily</td><td>aktualne</td><td>Tylko na kompie</td>
   <td><a href="https://crystara.trade/marketplace">CRYSTARA</a> (<a href="https://crystara.trade/marketplace" target="_blank">C</a>)</td>
   <td>
     <label><input type="checkbox" class="check table1" data-id="android12"> CHECK</label>
@@ -1565,7 +1577,7 @@ To wszystko! Teraz czekamy na zakończenie kampanii i airdrop.`}])">ℹ️</span
 
 <!-- ---------------------------------------------------------------------- --> 
 <tr>
-  <td>komputer</td><td></td><td></td><td></td><td>Tylko na kompie</td>
+  <td>komputer</td><td>1</td><td>daily</td><td>aktualne</td><td>Tylko na kompie</td>
   <td><a href="https://supranova.ai/">SUPRANOVA BRIDGE</a> (<a href="https://supranova.ai/" target="_blank">C</a>)</td>
   <td>
     <label><input type="checkbox" class="check table1" data-id="android13"> CHECK</label>
@@ -1575,7 +1587,7 @@ To wszystko! Teraz czekamy na zakończenie kampanii i airdrop.`}])">ℹ️</span
 
 <!-- ---------------------------------------------------------------------- -->
 <tr>
-  <td>komputer</td><td></td><td></td><td></td><td>Tylko na kompie</td>
+  <td>komputer</td><td>1</td><td>daily</td><td>aktualne</td><td>Tylko na kompie</td>
   <td><a href="https://myntusd.com/">MYNT USD / MegaETH & Monad</a> (<a href="https://myntusd.com/" target="_blank">C</a>)</td>
   <td>
     <label><input type="checkbox" class="check table1" data-id="MEGAETH7"> CHECK</label>
@@ -1585,7 +1597,7 @@ To wszystko! Teraz czekamy na zakończenie kampanii i airdrop.`}])">ℹ️</span
 
 <!-- ---------------------------------------------------------------------- -->
 <tr>
-  <td>komputer</td><td></td><td></td><td></td><td>Tylko na kompie</td>
+  <td>komputer</td><td>1</td><td>daily</td><td>aktualne</td><td>Tylko na kompie</td>
   <td><a href="https://base.app.tea.xyz/">TEA APP</a> (<a href="https://base.app.tea.xyz/" target="_blank">C</a>)</td>
   <td>
     <label><input type="checkbox" class="check table1" data-id="TEA3">
@@ -1594,6 +1606,7 @@ To wszystko! Teraz czekamy na zakończenie kampanii i airdrop.`}])">ℹ️</span
   </td>
   <td></td><td></td><td></td>
 </tr>
+
           
 
 
