--- a/index.html
+++ b/index.html
@@ -183,6 +183,18 @@ body {
 }
 </style>
 
+ <style>
+@media screen and (max-width: 768px) {
+  .katgo-table-2x2,
+  .katgo-table-2x2 tr,
+  .katgo-table-2x2 td {
+    display: block;
+    width: 100% !important;
+  }
+}
+</style>
+ 
+
 <!-- ░░░░░░░░░░░░░░░ TABELA: katgo-table-2x2 ░░░░░░░░░░░░░░░░░░ -->
 <table class="katgo-table-2x2">
   <tr>
