--- a/index.html
+++ b/index.html
@@ -1623,7 +1623,26 @@ To wszystko! Teraz czekamy na zakończenie kampanii i airdrop.`}])">ℹ️</span
       </table>
     </td>
     <!-- ---------------------------------------------------------------------- --><!-- ---------------------------------------------------------------------- --><!-- ---------------------------------------------------------------------- -->
-    <td>Wiersz 1, kolumna 2</td>
+    <td>
+     <td>
+  <div style="padding: 16px;">
+    <!-- ░░░░░░░░░░░░░░░░░░░░░░░░░░░░ KALENDARZE ░░░░░░░░░░░░░░░░░░░░░░░░░░░░ -->
+
+    <div style="width: 100%; max-width: 700px; margin: 0 auto;">
+      <h3 style="text-align:center;">💻 KALENDARZ KOMPUTER (OGÓLNY)</h3>
+      <div style="text-align:center; margin-bottom: 10px;">
+        <button onclick="changeMonth('computer-ph', -1)">⬅️</button>
+        <span id="calendar-computer-title" style="margin: 0 10px;"></span>
+        <button onclick="changeMonth('computer-ph', 1)">➡️</button>
+      </div>
+      <table id="calendar-computer" style="width: 100%; border-collapse: separate; border-spacing: 0 8px; table-layout: fixed; margin-bottom: 20px;"></table>
+    </div>
+  </div>
+</td>
+
+</td>
+
+    </td>
   </tr>
   <tr>
     <td>Wiersz 2, kolumna 1</td>
