--- a/index.html
+++ b/index.html
@@ -1623,12 +1623,10 @@ To wszystko! Teraz czekamy na zakończenie kampanii i airdrop.`}])">ℹ️</span
       </table>
     </td>
     <!-- ---------------------------------------------------------------------- --><!-- ---------------------------------------------------------------------- --><!-- ---------------------------------------------------------------------- -->
-    <td>
-     <td>
+    <td style="text-align: left; vertical-align: top;">
   <div style="padding: 16px;">
     <!-- ░░░░░░░░░░░░░░░░░░░░░░░░░░░░ KALENDARZE ░░░░░░░░░░░░░░░░░░░░░░░░░░░░ -->
-
-    <div style="width: 100%; max-width: 700px; margin: 0 auto;">
+    <div style="width: 100%; max-width: 700px; margin: 0 auto; text-align: left;">
       <h3 style="text-align:center;">💻 KALENDARZ KOMPUTER (OGÓLNY)</h3>
       <div style="text-align:center; margin-bottom: 10px;">
         <button onclick="changeMonth('computer-ph', -1)">⬅️</button>
@@ -1640,9 +1638,6 @@ To wszystko! Teraz czekamy na zakończenie kampanii i airdrop.`}])">ℹ️</span
   </div>
 </td>
 
-</td>
-
-    </td>
   </tr>
   <tr>
     <td>Wiersz 2, kolumna 1</td>
